@@ -1,3 +1,6 @@
+* New product plugin method `post_pull_hook` is called after a successful
+  pull.
+
 * Added support for python3
 
 * Close SQL connection after each operation (ingestion/search/etc.)
